Bug 89162 - Matrix multiply operator typecheck missing
Summary: Matrix multiply operator typecheck missing
Status: RESOLVED FIXED
Alias: None
Product: pycairo
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Steve Chaplin
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-16 06:36 UTC by Lawrence D'Oliveiro
Modified: 2017-07-05 15:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
typecheck Matrix.__mul__ second operand (771 bytes, text/plain)
2015-02-16 06:36 UTC, Lawrence D'Oliveiro
Details

Description Lawrence D'Oliveiro 2015-02-16 06:36:32 UTC
Created attachment 113517 [details]
typecheck Matrix.__mul__ second operand

In python3-cairo, the routine that implements the “*” operator between two Matrix objects neglects to ensure that its second operand really is a Matrix. Pass an arbitrary value, and it will cheerfully return nonsensical results, possibly even accessing invalid memory and causing a crash.

The enclosed patch adds the necessary typecheck.
Comment 1 Christoph Reiter 2017-07-05 15:06:57 UTC
Fixed since 1.12: https://github.com/pygobject/pycairo/issues/8


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.