matrix: fix typechecking of the multiplication operator under Python 3. Fixes #8

Python 2 only allowed the same type there, but Python 3 will pass any object.

Add manual type checking and set Py_TPFLAGS_CHECKTYPES for Python 2 so we get
the same behaviour on both Python versions.

Based on a patch by Lawrence D'Oliveiro from
    https://bugs.freedesktop.org/show_bug.cgi?id=89162